parser/src/snapshots/rustpython_parser__parser__tests__parse_bool_op_and.snap
---
source: parser/src/parser.rs
expression: parse_ast
---
BoolOp(
    ExprBoolOp {
        op: And,
        values: [
            Name(
                ExprName {
                    id: Identifier(
                        "x",
                    ),
                    ctx: Load,
                    range: 0..1,
                },
            ),
            Name(
                ExprName {
                    id: Identifier(
                        "y",
                    ),
                    ctx: Load,
                    range: 6..7,
                },
            ),
        ],
        range: 0..7,
    },
)
