parser/src/snapshots/rustpython_parser__parser__tests__parse_bool_op_or.snap
---
source: parser/src/parser.rs
expression: parse_ast
---
Attributed {
    custom: (),
    node: BoolOp(
        ExprBoolOp {
            op: Or,
            values: [
                Attributed {
                    custom: (),
                    node: Name(
                        ExprName {
                            id: Identifier(
                                "x",
                            ),
                            ctx: Load,
                            range: 0..1,
                        },
                    ),
                },
                Attributed {
                    custom: (),
                    node: Name(
                        ExprName {
                            id: Identifier(
                                "y",
                            ),
                            ctx: Load,
                            range: 5..6,
                        },
                    ),
                },
            ],
            range: 0..6,
        },
    ),
}
