parser/src/snapshots/rustpython_parser__parser__tests__parse_dict_comprehension.snap
---
source: parser/src/parser.rs
expression: parse_ast
---
DictComp(
    ExprDictComp {
        key: Name(
            ExprName {
                id: Identifier(
                    "x1",
                ),
                ctx: Load,
                range: 1..3,
            },
        ),
        value: Name(
            ExprName {
                id: Identifier(
                    "x2",
                ),
                ctx: Load,
                range: 5..7,
            },
        ),
        generators: [
            Comprehension {
                target: Name(
                    ExprName {
                        id: Identifier(
                            "y",
                        ),
                        ctx: Store,
                        range: 12..13,
                    },
                ),
                iter: Name(
                    ExprName {
                        id: Identifier(
                            "z",
                        ),
                        ctx: Load,
                        range: 17..18,
                    },
                ),
                ifs: [],
                is_async: false,
                range: PhantomData<ruff_text_size::range::TextRange>,
            },
        ],
        range: 0..19,
    },
)
