parser/src/snapshots/rustpython_parser__parser__tests__parse_f_string.snap
---
source: parser/src/parser.rs
expression: parse_ast
---
[
    Attributed {
        custom: (),
        node: Expr(
            StmtExpr {
                value: Attributed {
                    custom: (),
                    node: JoinedStr(
                        ExprJoinedStr {
                            values: [
                                Attributed {
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Str(
                                                "Hello world",
                                            ),
                                            kind: None,
                                            range: 0..14,
                                        },
                                    ),
                                },
                            ],
                            range: 0..14,
                        },
                    ),
                },
                range: 0..14,
            },
        ),
    },
]
