parser/src/snapshots/rustpython_parser__parser__tests__parse_generator_comprehension.snap
---
source: parser/src/parser.rs
expression: parse_ast
---
GeneratorExp(
    ExprGeneratorExp {
        elt: Name(
            ExprName {
                id: Identifier(
                    "x",
                ),
                ctx: Load,
                range: 1..2,
            },
        ),
        generators: [
            Comprehension {
                target: Name(
                    ExprName {
                        id: Identifier(
                            "y",
                        ),
                        ctx: Store,
                        range: 7..8,
                    },
                ),
                iter: Name(
                    ExprName {
                        id: Identifier(
                            "z",
                        ),
                        ctx: Load,
                        range: 12..13,
                    },
                ),
                ifs: [],
                is_async: false,
                range: PhantomData<ruff_text_size::range::TextRange>,
            },
        ],
        range: 0..14,
    },
)
