parser/src/snapshots/rustpython_parser__parser__tests__parse_if_else_generator_comprehension.snap
---
source: parser/src/parser.rs
expression: parse_ast
---
GeneratorExp(
    ExprGeneratorExp {
        elt: IfExp(
            ExprIfExp {
                test: Name(
                    ExprName {
                        id: Identifier(
                            "y",
                        ),
                        ctx: Load,
                        range: 6..7,
                    },
                ),
                body: Name(
                    ExprName {
                        id: Identifier(
                            "x",
                        ),
                        ctx: Load,
                        range: 1..2,
                    },
                ),
                orelse: Name(
                    ExprName {
                        id: Identifier(
                            "y",
                        ),
                        ctx: Load,
                        range: 13..14,
                    },
                ),
                range: 1..14,
            },
        ),
        generators: [
            Comprehension {
                target: Name(
                    ExprName {
                        id: Identifier(
                            "y",
                        ),
                        ctx: Store,
                        range: 19..20,
                    },
                ),
                iter: Name(
                    ExprName {
                        id: Identifier(
                            "z",
                        ),
                        ctx: Load,
                        range: 24..25,
                    },
                ),
                ifs: [],
                is_async: false,
                range: (),
            },
        ],
        range: 0..26,
    },
)
