parser/src/snapshots/rustpython_parser__parser__tests__parse_list_comprehension.snap
---
source: parser/src/parser.rs
expression: parse_ast
---
Attributed {
    custom: (),
    node: ListComp(
        ExprListComp {
            elt: Attributed {
                custom: (),
                node: Name(
                    ExprName {
                        id: Identifier(
                            "x",
                        ),
                        ctx: Load,
                        range: 1..2,
                    },
                ),
            },
            generators: [
                Comprehension {
                    target: Attributed {
                        custom: (),
                        node: Name(
                            ExprName {
                                id: Identifier(
                                    "y",
                                ),
                                ctx: Store,
                                range: 7..8,
                            },
                        ),
                    },
                    iter: Attributed {
                        custom: (),
                        node: Name(
                            ExprName {
                                id: Identifier(
                                    "z",
                                ),
                                ctx: Load,
                                range: 12..13,
                            },
                        ),
                    },
                    ifs: [],
                    is_async: false,
                    range: 3..13,
                },
            ],
            range: 0..14,
        },
    ),
}
