parser/src/snapshots/rustpython_parser__parser__tests__parse_print_2.snap
---
source: parser/src/parser.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            value: Call(
                ExprCall {
                    func: Name(
                        ExprName {
                            id: Identifier(
                                "print",
                            ),
                            ctx: Load,
                            range: 0..5,
                        },
                    ),
                    args: [
                        Constant(
                            ExprConstant {
                                value: Str(
                                    "Hello world",
                                ),
                                kind: None,
                                range: 6..19,
                            },
                        ),
                        Constant(
                            ExprConstant {
                                value: Int(
                                    2,
                                ),
                                kind: None,
                                range: 21..22,
                            },
                        ),
                    ],
                    keywords: [],
                    range: 0..23,
                },
            ),
            range: 0..23,
        },
    ),
]
